# openai_code_scaffold_v1

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: lint_all.sh  settings.json
.claude/agents/: code-reviewer.md  implementer.md  refactorer.md  reviewer.md  spec-reviewer.md  spec-writer.md  test-writer.md
.claude/docs/: conventions.md  git-workflow.md  workflow.md
.claude/hooks/: post_commit_spec_check.sh  post_write_lint.sh  pre_write_check.sh
.claude/linters/: naming_conventions.sh  spec_coverage.sh
.claude/templates/: execution_plan.md  feature_spec.md
docs/: architecture.md  git-workflow.md  workflow.md
scripts/: lint_all.sh
scripts/hooks/: post_write_lint.sh  pre_write_check.sh
scripts/linters/: file_size.sh  layer_deps.sh  spec_coverage.sh  structured_logging.sh
specs/templates/: design_doc.md  execution_plan.md  feature_spec.md
